--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,20 @@
+version: '3.8'
 services:
   db:
     image: postgres:16-alpine
     restart: always
+    ports:
+    - 5432:5432
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+    - POSTGRES_USER=developer
+    - POSTGRES_PASSWORD=rahasia
+    volumes:
+    - db:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready"]
       interval: 1s
       timeout: 5s
-      retries: 10      
-    ports:
-      - 5432:5432
-    volumes:
-      - db:/var/lib/postgresql/data
-
-  adminer:
-    image: adminer
-    restart: always
-    ports:
-      - 8080:8080
+      retries: 10
 volumes:
   db:
     driver: local
