--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "./scripts/run-dev-server.sh"
+    "dev": "./scripts/run-dev-server.sh",
+    "docker:clear-db": "docker compose down -v"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/config": "^3.3.3",
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
@@ -26,8 +29,11 @@
   "dependencies": {
     "@prisma/client": "^5.7.1",
     "bcrypt": "^5.1.1",
+    "config": "^3.3.10",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "envalid": "^8.0.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "lodash.merge": "^4.6.2",
