--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/config": "^3.3.3",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
@@ -29,6 +30,7 @@
   "dependencies": {
     "@prisma/client": "^5.7.1",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "config": "^3.3.10",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -36,7 +38,9 @@
     "envalid": "^8.0.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lodash.merge": "^4.6.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "zod": "^3.22.4"
   }
 }
