--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/lodash.merge": "^4.6.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.6",
+    "@types/nodemailer": "^6.4.14",
     "nodemon": "^3.0.2",
     "prisma": "^5.7.1",
     "ts-node": "^10.9.2",
@@ -41,6 +42,7 @@
     "lodash": "^4.17.21",
     "lodash.merge": "^4.6.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.8",
     "zod": "^3.22.4"
   }
 }
