--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "config": "^3.3.10",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "envalid": "^8.0.0",
     "express": "^4.18.2",
