--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     environment:
       - POSTGRES_USER=developer
       - POSTGRES_PASSWORD=rahasia
+      - POSTGRES_DB=development
 
     # Add "forwardPorts": ["5432"] to **devcontainer.json** to forward PostgreSQL locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
