--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "./scripts/run-dev-server.sh",
     "dev:c": "npx prisma db push && ./node_modules/.bin/nodemon ./src/index.ts",
     "docker:clear-db": "docker compose down -v",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node ./dist/src/index.js"
   },
   "keywords": [],
   "author": "",
