--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "./scripts/run-dev-server.sh",
     "dev:c": "npx prisma db push && ./node_modules/.bin/nodemon ./src/index.ts",
     "docker:clear-db": "docker compose down -v",
-    "build": "tsc",
+    "build": "rm -rf ./dist && tsc",
     "start": "NODE_ENV=production node ./dist/src/index.js"
   },
   "keywords": [],
