--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 DATABASE_URL=postgresql://developer:rahasia@localhost:5432/development?schema=public
+TESTING_DATABASE_URL=postgresql://developer:rahasia@localhost:5432/testing?schema=public
+
 PORT=3001
 NODE_ENV=development
 
